# musicserver

./: .gitignore  README.md  docker-compose.yml
.claude/skills/music-server-release/: SKILL.md
.github/workflows/: build-packages.yml
docs/packaging/: 2026-06-17-tauri-packaging-design.md
docs/superpowers/specs/: 2026-05-15-packaging-design.md
packaging/: build.mjs  versions.json
packaging/launcher/: launcher.cjs  sea-config.json
packaging/tauri/: README.md  versions.json
packaging/tauri/backend/: package.json
packaging/tauri/backend/src-tauri/: Cargo.toml  tauri.conf.json
packaging/tauri/backend/src-tauri/capabilities/: default.json
packaging/tauri/backend/src-tauri/icons/: icon.icns
packaging/tauri/backend/src-tauri/src/: lib.rs  main.rs  settings.rs
packaging/tauri/frontend/: package.json
packaging/tauri/frontend/src-tauri/: Cargo.toml  tauri.conf.json
packaging/tauri/frontend/src-tauri/capabilities/: default.json
packaging/tauri/frontend/src-tauri/icons/: icon.icns
packaging/tauri/frontend/src-tauri/src/: lib.rs  main.rs  settings.rs
packaging/tauri/scripts/: prepare-sidecars.mjs
