[package]
name = "musicserver-backend"
version = "1.0.0-alpha2"
description = "Music Server backend desktop package (backend + MongoDB, no UI)"
authors = ["Massimiliano Fanciulli"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "musicserver_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
